Add main.css file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test 2</title>
+    <title>Wykop - klon by MacKry</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="left"></div>
+      <div class="right"></div>
+    </header>
+    <main>
+      <aside class="slidebar-left"></aside>
+      <div class="main-content">
+        <aside class="hits-top"></aside>
+        <section class="main"></section>
+        <aside class="slidebar-right"></aside>
+      </div>
+    </main>
+  </body>
 </html>
