--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="right"></div>
     </header>
     <main>
-      <aside class="slidebar-left"></aside>
+      <aside class="slidebar-left">ddd</aside>
       <div class="main-content">
         <aside class="hits-top"></aside>
         <section class="main"></section>
