Add navigation menu to header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
   </head>
   <body>
     <header class="header">
-      <div class="left"></div>
-      <div class="right"></div>
+      <div class="header-left">
+        <button class="header-button">Menu</button>
+        <div class="header-logo">LOGO</div>
+        <nav class="main-menu">
+          <ul class="main-menu-ul">
+            <li>Główna</li>
+            <li>Wykopalisko</li>
+            <li>Mikroblog</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header-right">
+        <section class="search">search</section>
+        <nav class="user-nav">user</nav>
+      </div>
     </header>
     <main>
       <aside class="slidebar-left">ddd</aside>
