Styled header menu button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header class="header">
       <div class="header-left">
-        <button class="header-button">Menu</button>
+        <button class="header-button">
+          <img src="icons/menu-svgrepo-com(1).svg" alt="menu-icon" />
+        </button>
         <div class="header-logo">LOGO</div>
         <nav class="main-menu">
           <ul class="main-menu-ul">
