Added hover and transision to header elements

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <nav class="user-nav">
           <div class="icons">
             <img src="icons/koperta.png" alt="icon" />
-            <img src="icons/dzwonek.png" alt="icon" />
-            <img src="icons/hash.png" alt="icon" />
-            <img src="icons/avatar.png" alt="icon" />
           </div>
+          <div class="icons"><img src="icons/dzwonek.png" alt="icon" /></div>
+          <div class="icons"><img src="icons/hash.png" alt="icon" /></div>
+          <div class="icons"><img src="icons/avatar.png" alt="icon" /></div>
         </nav>
       </div>
     </header>
