Change name main.js to slidebarButton.js

--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
         <aside class="slidebar-right"></aside>
       </div>
     </main>
-    <script src="main.js"></script>
+    <script src="slidebarButton.js"></script>
   </body>
 </html>
