Added night mode slider

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop - klon by MacKry</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="slider.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -82,6 +83,93 @@
               </div>
             </div>
           </div>
+          <div class="slidebar-left-nav">
+            <ul class="slidebar-left-main-ul">
+              <li>
+                <a href="#"
+                  ><img src="icons/house-svgrepo-com.svg " alt="house icon" />
+                  <p>Wykop.pl</p></a
+                >
+              </li>
+            </ul>
+            <ul class="slidebar-left-second-ul">
+              <li>
+                <a href="#"
+                  ><img src="icons/bulb-2-svgrepo-com.svg " alt="house icon" />
+                  <p>Ciekawostki</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="icons/files-svgrepo-com.svg" alt="house icon" />
+                  <p>Informacje</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="icons/electronic-controller-gamepad-svgrepo-com.svg "
+                    alt="house icon"
+                  />
+                  <p>Rozrywka</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="icons/shirt-outline-svgrepo-com.svg"
+                    alt="house icon"
+                  />
+                  <p>Sport</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="icons/steering-wheel-svgrepo-com.svg "
+                    alt="house icon"
+                  />
+                  <p>Motoryzacja</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="icons/chip-svgrepo-com.svg " alt="house icon" />
+                  <p>Technologia</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="icons/rocket-svgrepo-com.svg " alt="house icon" />
+                  <p>Ukraina</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="icons/coins-dollar-money-currency-finance-payment-svgrepo-com.svg "
+                    alt="house icon"
+                  />
+                  <p>Gospodarka</p></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><img
+                    src="icons/suitcase-tag-svgrepo-com.svg"
+                    alt="house icon"
+                  />
+                  <p>Podróże</p></a
+                >
+              </li>
+            </ul>
+            <div class="night-mode">
+              <label class="switch">
+                <input type="checkbox" id="toggleSwitch" />
+                <span class="slider"></span> </label
+              >Tryb nocny
+            </div>
+          </div>
         </div>
         <div
           class="slidebar-left-content-small"
@@ -97,5 +185,6 @@
       </div>
     </main>
     <script src="slidebarButton.js"></script>
+    <script src="slider.js"></script>
   </body>
 </html>
