Added files: day.css, night.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wykop - klon by MacKry</title>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="night.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
