Renaming color variables

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <li>
                 <a href="#"
                   ><img src="icons/house-svgrepo-com.svg " alt="house icon" />
-                  <p>Wykop.pl</p></a
+                  <p class="wykop-p">Wykop.pl</p></a
                 >
               </li>
             </ul>
@@ -167,8 +167,9 @@
             <div class="night-mode">
               <label class="switch">
                 <input type="checkbox" id="toggleSwitch" />
-                <span class="slider"></span> </label
-              >Tryb nocny
+                <span class="slider"></span>
+              </label>
+              <p class="night-mode-txt">Tryb nocny</p>
             </div>
           </div>
         </div>
