Create basic structure for main content

--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
         </div>
       </aside>
       <div class="main-content">
-        <aside class="hits-top"></aside>
-        <section class="main"></section>
-        <aside class="slidebar-right"></aside>
+        <aside class="hits-top">HITS</aside>
+        <section class="articles">Artykuly</section>
+        <aside class="slidebar-right">Prawy slidebar</aside>
       </div>
     </main>
     <script src="slidebarButton.js"></script>
