Add CSS for .hits-top section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,26 @@
         </div>
       </aside>
       <div class="main-content">
-        <aside class="hits-top">HITS</aside>
+        <aside class="hits-top">
+          <header class="hits-header">
+            <h1>HITY WYKOPU</h1>
+            <p>Zobacz więcej ></p>
+          </header>
+          <section class="hits-container">
+            <article class="hit-article">
+              <img src="articles/1721160488890.jpg" alt="cat photo" />
+              <p>Tytul artykulu</p>
+            </article>
+            <article class="hit-article">
+              <img src="articles/1721160488890.jpg" alt="cat photo" />
+              <p>Tytul artykulu</p>
+            </article>
+            <article class="hit-article">
+              <img src="articles/1721160488890.jpg" alt="cat photo" />
+              <p>Tytul artykulu</p>
+            </article>
+          </section>
+        </aside>
         <section class="articles">Artykuly</section>
         <aside class="slidebar-right">Prawy slidebar</aside>
       </div>
