style: add gradient overlay to hit-article images

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
           </header>
           <section class="hits-container">
             <article class="hit-article">
-              <img src="articles/1721160488890.jpg" alt="cat photo" />
-              <p>Tytul artykulu</p>
+              <img src="articles/kotNaKsiezycu.jpg" alt="cat photo" />
+              <p class="hit-img-title">Pierwszy kot na księżycu</p>
             </article>
             <article class="hit-article">
               <img src="articles/1721160488890.jpg" alt="cat photo" />
