Added image 'kapsulka.jpg'

--- a/index.html
+++ b/index.html
@@ -192,12 +192,12 @@
               <p class="hit-img-title">Pierwszy kot na księżycu</p>
             </article>
             <article class="hit-article">
-              <img src="articles/1721160488890.jpg" alt="cat photo" />
-              <p>Tytul artykulu</p>
+              <img src="articles/mot.jpg" alt="cat photo" />
+              <p class="hit-img-title">Magic of Turinland na Amigę 500</p>
             </article>
             <article class="hit-article">
-              <img src="articles/1721160488890.jpg" alt="cat photo" />
-              <p>Tytul artykulu</p>
+              <img src="articles/mot.jpg" alt="cat photo" />
+              <p class="hit-img-title">Magic of Turinland na Amigę 500</p>
             </article>
           </section>
         </aside>
