Feat: add and style .likes-count

--- a/index.html
+++ b/index.html
@@ -190,14 +190,17 @@
             <article class="hit-article">
               <img src="articles/kotNaKsiezycu.jpg" alt="cat photo" />
               <p class="hit-img-title">Pierwszy kot na księżycu</p>
+              <div class="likes-count">2034</div>
             </article>
             <article class="hit-article">
               <img src="articles/mot.jpg" alt="cat photo" />
               <p class="hit-img-title">Magic of Turinland na Amigę 500</p>
+              <div class="likes-count">1980</div>
             </article>
             <article class="hit-article">
-              <img src="articles/mot.jpg" alt="cat photo" />
-              <p class="hit-img-title">Magic of Turinland na Amigę 500</p>
+              <img src="articles/kapsulka.jpeg" alt="cat photo" />
+              <p class="hit-img-title">Lek na raka odkryty w Zamościu</p>
+              <div class="likes-count">1205</div>
             </article>
           </section>
         </aside>
