Adjusted image sizes for hits-top category

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </header>
           <section class="hits-container">
             <article class="hit-article">
-              <img src="articles/kotNaKsiezycu.jpg" alt="cat photo" />
+              <img src="articles/kotNaKsiezycu1.jpg" alt="cat photo" />
               <p class="hit-img-title">Pierwszy kot na księżycu</p>
               <div class="likes-count">2034</div>
             </article>
