Created initial layout for articles-container section

--- a/index.html
+++ b/index.html
@@ -204,8 +204,54 @@
             </article>
           </section>
         </aside>
-        <section class="articles">Artykuly</section>
-        <aside class="slidebar-right">Prawy slidebar</aside>
+        <div class="articles-container">
+          <div class="articles-main">
+            <header class="articles-menu">
+              <h1>GŁÓWNA</h1>
+              <p>Najnowsze</p>
+            </header>
+            <section class="article-body">
+              <aside>BOK</aside>
+              <article class="article">
+                <section class="article-text">
+                  <header><h1>TYTUL ARTYKULU</h1></header>
+                  <p>
+                    dddddddddd dddddddddddddd dddddddd ddddddddddd
+                    dddddddddddddddd dddddddd ddddddddddddd dddddddd
+                    dddddddddddd dddddd dddddddd
+                  </p>
+                  <footer>STOPKA ARTYKULU</footer>
+                </section>
+                <figure class="article-photo">
+                  <img src="articles/kotNaKsiezycu1.jpg" alt="" />
+                </figure>
+              </article>
+            </section>
+            <section class="article-body">
+              <aside>BOK</aside>
+              <article class="article">
+                <section class="article-text">
+                  <header><h1>TYTUL ARTYKULU</h1></header>
+                  <p>
+                    dddddddddd dddddddddddddd dddddddd ddddddddddd
+                    dddddddddddddddd dddddddd ddddddddddddd dddddddd
+                    dddddddddddd dddddd dddddddd
+                  </p>
+                  <footer>STOPKA ARTYKULU</footer>
+                </section>
+                <figure class="article-photo">
+                  <img src="articles/kotNaKsiezycu1.jpg" alt="" />
+                </figure>
+              </article>
+            </section>
+          </div>
+          <div class="slidebar-right">
+            <p>
+              dddddddddd dddddddddddddd dddddddd ddddddddddd dddddddddddddddd
+              dddddddd ddddddddddddd dddddddd dddddddddddd dddddd dddddddd
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <script src="slidebarButton.js"></script>
