Stylized .article-body

--- a/index.html
+++ b/index.html
@@ -211,16 +211,29 @@
               <p>Najnowsze</p>
             </header>
             <section class="article-body">
-              <aside>BOK</aside>
+              <aside>
+                <p>125</p>
+                <button>WYKOP</button>
+              </aside>
               <article class="article">
                 <section class="article-text">
-                  <header><h1>TYTUL ARTYKULU</h1></header>
-                  <p>
-                    dddddddddd dddddddddddddd dddddddd ddddddddddd
-                    dddddddddddddddd dddddddd ddddddddddddd dddddddd
-                    dddddddddddd dddddd dddddddd
-                  </p>
-                  <footer>STOPKA ARTYKULU</footer>
+                  <header>
+                    <h1>Spłonęła fabryka Paluszków Beskidzkich</h1>
+                  </header>
+                  <p>Szef zamiast obcinać pensje dba o swoich pracowników.</p>
+                  <footer>
+                    <p>songoku z namek.com</p>
+                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <div class="article-comments-tags">
+                      <p>
+                        <img src="icons/icons8-comment-24(2).png" />
+                      </p>
+                      <p>164</p>
+                      <p style="font-weight: bold">&bull;</p>
+                      <p>#paluszkibeskidzkie</p>
+                      <p>#januszebiznesu</p>
+                    </div>
+                  </footer>
                 </section>
                 <figure class="article-photo">
                   <img src="articles/kotNaKsiezycu1.jpg" alt="" />
@@ -228,16 +241,35 @@
               </article>
             </section>
             <section class="article-body">
-              <aside>BOK</aside>
+              <aside>
+                <p>101</p>
+                <button>WYKOP</button>
+              </aside>
               <article class="article">
                 <section class="article-text">
-                  <header><h1>TYTUL ARTYKULU</h1></header>
+                  <header>
+                    <h1>
+                      Kultowe piwo było liderem przez 22 lata. Teraz jest na 3.
+                      miejscu.
+                    </h1>
+                  </header>
                   <p>
-                    dddddddddd dddddddddddddd dddddddd ddddddddddd
-                    dddddddddddddddd dddddddd ddddddddddddd dddddddd
-                    dddddddddddd dddddd dddddddd
+                    Ostrzeżenie dla korpo jak może kończyć się wciskanie ludziom
+                    na siłę swoich ideologii
                   </p>
-                  <footer>STOPKA ARTYKULU</footer>
+                  <footer>
+                    <p>songoku z namek.com</p>
+                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <div class="article-comments-tags">
+                      <p>
+                        <img src="icons/icons8-comment-24(2).png" />
+                      </p>
+                      <p>125</p>
+                      <p style="font-weight: bold">&bull;</p>
+                      <p>#paluszkibeskidzkie</p>
+                      <p>#januszebiznesu</p>
+                    </div>
+                  </footer>
                 </section>
                 <figure class="article-photo">
                   <img src="articles/kotNaKsiezycu1.jpg" alt="" />
