Add and style sidebar articles section

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </article>
             <article class="hit-article">
               <img src="articles/mot.jpg" alt="cat photo" />
-              <p class="hit-img-title">Magic of Turinland na Amigę 500</p>
+              <p class="hit-img-title">Magic of Turinland na C64</p>
               <div class="likes-count">1980</div>
             </article>
             <article class="hit-article">
@@ -218,9 +218,13 @@
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Spłonęła fabryka Paluszków Beskidzkich</h1>
+                    <h1>Rewolucyjna bateria naładuje się w minute!</h1>
                   </header>
-                  <p>Szef zamiast obcinać pensje dba o swoich pracowników.</p>
+                  <p>
+                    Wynaleziono nowy materiał do magazynowania energii
+                    elektrycznej. Przełomowe baterie będzie można ładować
+                    błyskawicznie!
+                  </p>
                   <footer>
                     <p>songoku z namek.com</p>
                     <p>opublikowany: 18 godz. i 44 min temu</p>
@@ -230,13 +234,14 @@
                       </p>
                       <p>164</p>
                       <p style="font-weight: bold">&bull;</p>
-                      <p>#paluszkibeskidzkie</p>
-                      <p>#januszebiznesu</p>
+                      <p>#nauka</p>
+                      <p>#baterie</p>
+                      <p>#ciekawostki</p>
                     </div>
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/kotNaKsiezycu1.jpg" alt="" />
+                  <img src="articles/battery.jpeg" alt="battery image" />
                 </figure>
               </article>
             </section>
@@ -249,40 +254,139 @@
                 <section class="article-text">
                   <header>
                     <h1>
-                      Kultowe piwo było liderem przez 22 lata. Teraz jest na 3.
-                      miejscu.
+                      Polacy najbardziej uśmiechnietym narodem na świecie.
                     </h1>
                   </header>
                   <p>
-                    Ostrzeżenie dla korpo jak może kończyć się wciskanie ludziom
-                    na siłę swoich ideologii
+                    Wg badań "Z brązu" przeprowadzonych w ostatni weekend
+                    noworoczny wynika, że Polska jest liderem wśród pozytywnego
+                    nastawienia do życia obywateli.
                   </p>
                   <footer>
-                    <p>songoku z namek.com</p>
-                    <p>opublikowany: 18 godz. i 44 min temu</p>
+                    <p>gargamel z smerfy.co</p>
+                    <p>opublikowany: 20 godz. i 59 min temu</p>
                     <div class="article-comments-tags">
                       <p>
                         <img src="icons/icons8-comment-24(2).png" />
                       </p>
                       <p>125</p>
                       <p style="font-weight: bold">&bull;</p>
-                      <p>#paluszkibeskidzkie</p>
+                      <p>#husaria</p>
+                      <p>#polakstronk</p>
+                    </div>
+                  </footer>
+                </section>
+                <figure class="article-photo">
+                  <img src="articles/smile.jpeg" alt="smile image" />
+                </figure>
+              </article>
+            </section>
+            <section class="article-body">
+              <aside>
+                <p>101</p>
+                <button>WYKOP</button>
+              </aside>
+              <article class="article">
+                <section class="article-text">
+                  <header>
+                    <h1>Koniec biedy w Unii Europejskiej!</h1>
+                  </header>
+                  <p>
+                    Bruksela ostatecznie rozprawiła się z problemem biedy w
+                    Europie. Od godziny 21:37 obowiązuje nowa ustawa zgodnie, z
+                    którą bycie biednym zostało prawnie zakazane. To największy
+                    do tej pory sukces KE.
+                  </p>
+                  <footer>
+                    <p>saturas z jarkendar.gc</p>
+                    <p>opublikowany: 23 godz. i 12 min temu</p>
+                    <div class="article-comments-tags">
+                      <p>
+                        <img src="icons/icons8-comment-24(2).png" />
+                      </p>
+                      <p>102</p>
+                      <p style="font-weight: bold">&bull;</p>
+                      <p>#bieda</p>
                       <p>#januszebiznesu</p>
                     </div>
                   </footer>
                 </section>
                 <figure class="article-photo">
-                  <img src="articles/kotNaKsiezycu1.jpg" alt="" />
+                  <img
+                    src="articles/poverty-and-wealth.jpeg"
+                    alt="smile image"
+                  />
                 </figure>
               </article>
             </section>
           </div>
-          <div class="slidebar-right">
-            <p>
-              dddddddddd dddddddddddddd dddddddd ddddddddddd dddddddddddddddd
-              dddddddd ddddddddddddd dddddddd dddddddddddd dddddd dddddddd
-            </p>
-          </div>
+          <aside class="slidebar-right">
+            <header class="articles-right-header">
+              <h2>HITY</h2>
+              <p>tygodnia</p>
+            </header>
+            <article class="article-right-body">
+              <figure class="article-right-image">
+                <img src="articles/taxes.jpg" alt="article-image" />
+              </figure>
+              <section class="article-right-text">
+                <p>
+                  Rząd Polski obniża tymczasowy VAT i likwiduje podatek
+                  dochodowy.
+                </p>
+                <footer>
+                  <img src="icons/wykop.png" alt="w-icon" />
+                  <p>1201</p>
+                </footer>
+              </section>
+            </article>
+            <article class="article-right-body">
+              <figure class="article-right-image">
+                <img src="articles/toiler-papier.jpg" alt="article-image" />
+              </figure>
+              <section class="article-right-text">
+                <p>
+                  Po wprowadzeniu białego ładu w sklepach zabrakło papieru
+                  toaletowego.
+                </p>
+                <footer>
+                  <img src="icons/wykop.png" alt="w-icon" />
+                  <p>1109</p>
+                </footer>
+              </section>
+            </article>
+            <article class="article-right-body">
+              <figure class="article-right-image">
+                <img
+                  src="articles/football-polish-reprezentation.jpg"
+                  alt="article-image"
+                />
+              </figure>
+              <section class="article-right-text">
+                <p>
+                  Polska reprezentacja awansuje do finału mistrzostw świata!
+                </p>
+                <footer>
+                  <img src="icons/wykop.png" alt="w-icon" />
+                  <p>1043</p>
+                </footer>
+              </section>
+            </article>
+            <article class="article-right-body">
+              <figure class="article-right-image">
+                <img src="articles/18-birthday.jpg" alt="article-image" />
+              </figure>
+              <section class="article-right-text">
+                <p>
+                  Krzysztof Ibisz zaprasza na swoją osiemnastkę w Bieszczadach.
+                </p>
+                <footer>
+                  <img src="icons/wykop.png" alt="w-icon" />
+                  <p>1186</p>
+                </footer>
+              </section>
+            </article>
+          </aside>
         </div>
       </div>
     </main>
