Added day mode colors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <nav class="main-menu">
           <ul class="main-menu-ul">
-            <li class="main-menu-li">Główna</li>
+            <li class="main-menu-li active">Główna</li>
             <li class="main-menu-li-wykopalisko">
               Wykopalisko
               <strong class="wykopalisko-number">268</strong>
@@ -330,10 +330,10 @@
                 <img src="articles/taxes.jpg" alt="article-image" />
               </figure>
               <section class="article-right-text">
-                <p>
+                <h1>
                   Rząd Polski obniża tymczasowy VAT i likwiduje podatek
                   dochodowy.
-                </p>
+                </h1>
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1201</p>
@@ -345,10 +345,10 @@
                 <img src="articles/toiler-papier.jpg" alt="article-image" />
               </figure>
               <section class="article-right-text">
-                <p>
+                <h1>
                   Po wprowadzeniu białego ładu w sklepach zabrakło papieru
                   toaletowego.
-                </p>
+                </h1>
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1109</p>
@@ -363,9 +363,9 @@
                 />
               </figure>
               <section class="article-right-text">
-                <p>
+                <h1>
                   Polska reprezentacja awansuje do finału mistrzostw świata!
-                </p>
+                </h1>
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1043</p>
@@ -377,9 +377,9 @@
                 <img src="articles/18-birthday.jpg" alt="article-image" />
               </figure>
               <section class="article-right-text">
-                <p>
+                <h1>
                   Krzysztof Ibisz zaprasza na swoją osiemnastkę w Bieszczadach.
-                </p>
+                </h1>
                 <footer>
                   <img src="icons/wykop.png" alt="w-icon" />
                   <p>1186</p>
