--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="night.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
+    <link rel="stylesheet" href="responsive.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,7 +59,10 @@
           </div>
           <div class="icons"><img src="icons/dzwonek.png" alt="icon" /></div>
           <div class="icons"><img src="icons/hash.png" alt="icon" /></div>
-          <div class="icons"><img src="icons/avatar.png" alt="icon" /></div>
+          <button class="search-button">
+            <img src="icons/lupa.png" alt="icon" class="search-icon" />
+          </button>
+          <div class="icon-user"><img src="icons/avatar.png" alt="icon" /></div>
         </nav>
       </div>
     </header>
