Added .article-left-aside, .article-bottom-aside

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <p>Najnowsze</p>
             </header>
             <section class="article-body">
-              <aside>
+              <aside class="article-left-aside">
                 <p>125</p>
                 <button>WYKOP</button>
               </aside>
@@ -243,6 +243,10 @@
                       <p>#ciekawostki</p>
                     </div>
                   </footer>
+                  <aside class="article-bottom-aside">
+                    <p>125</p>
+                    <button>WYKOP</button>
+                  </aside>
                 </section>
                 <figure class="article-photo">
                   <img src="articles/battery.jpeg" alt="battery image" />
@@ -250,8 +254,8 @@
               </article>
             </section>
             <section class="article-body">
-              <aside>
-                <p>101</p>
+              <aside class="article-left-aside">
+                <p>115</p>
                 <button>WYKOP</button>
               </aside>
               <article class="article">
@@ -279,6 +283,10 @@
                       <p>#polakstronk</p>
                     </div>
                   </footer>
+                  <aside class="article-bottom-aside">
+                    <p>115</p>
+                    <button>WYKOP</button>
+                  </aside>
                 </section>
                 <figure class="article-photo">
                   <img src="articles/smile.jpeg" alt="smile image" />
@@ -286,7 +294,7 @@
               </article>
             </section>
             <section class="article-body">
-              <aside>
+              <aside class="article-left-aside">
                 <p>101</p>
                 <button>WYKOP</button>
               </aside>
@@ -314,6 +322,10 @@
                       <p>#januszebiznesu</p>
                     </div>
                   </footer>
+                  <aside class="article-bottom-aside">
+                    <p>101</p>
+                    <button>WYKOP</button>
+                  </aside>
                 </section>
                 <figure class="article-photo">
                   <img
