--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
             </header>
             <section class="article-body">
               <aside class="article-left-aside">
-                <p>125</p>
-                <button>WYKOP</button>
+                <p class="like-count">125</p>
+                <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
@@ -251,8 +251,8 @@
             </section>
             <section class="article-body">
               <aside class="article-left-aside">
-                <p>115</p>
-                <button>WYKOP</button>
+                <p class="like-count">115</p>
+                <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
@@ -287,8 +287,8 @@
             </section>
             <section class="article-body">
               <aside class="article-left-aside">
-                <p>101</p>
-                <button>WYKOP</button>
+                <p class="like-count">101</p>
+                <button class="like-button">WYKOP</button>
               </aside>
               <article class="article">
                 <section class="article-text">
@@ -396,5 +396,6 @@
     </main>
     <script src="slidebarButton.js"></script>
     <script src="slider.js"></script>
+    <script src="likesCount.js"></script>
   </body>
 </html>
