--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <article class="article">
                 <section class="article-text">
                   <header>
-                    <h1>Rewolucyjna bateria naładuje się w minute!</h1>
+                    <h1>Rewolucyjna bateria naładuje się w minutę!</h1>
                   </header>
                   <p>
                     Wynaleziono nowy materiał do magazynowania energii
