--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wykop - klon by MacKry</title>
+    <title>Wykop clone by MacKry</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="night.css" id="themeStylesheet" />
     <link rel="stylesheet" href="slider.css" />
