Style: Improve styling for commentary-section

--- a/artykul1.html
+++ b/artykul1.html
@@ -227,10 +227,22 @@
             </header>
             <section class="commentary-section">
               <div class="commentary-section-left">
-                <div class="commentary-section-logo">LOGO</div>
-                <p class="commentary-section-text">TEXT</p>
+                <div class="commentary-section-logo">
+                  <img src="icons/avatar.png">
+                  <div class="user-info-container">
+                    <div class="user-info">Matasek</div>
+                    <time class="user-time">12:00</time>
+                  </div>
+
+                </div>
+                <p class="commentary-section-text">Przykładowy komentarz do artykułu,Przykładowy komentarz do artykułu</p>
               </div>
-              <div class="commentary-section-right">lajki</div>
+              <div class="commentary-section-right">
+                <div class="article-likes">               
+                  <p class="article-likes-count">25</p>
+                  <button class="plus"></button>
+                  <div class="minus"></div></div>
+              </div>
               <footer class="commentary-section-footer">Footer</footer>
             </section>
           </div>
