style: .commentary-section-footer

--- a/artykul1.html
+++ b/artykul1.html
@@ -243,7 +243,13 @@
                   <button class="plus"></button>
                   <div class="minus"></div></div>
               </div>
-              <footer class="commentary-section-footer">Footer</footer>
+              <footer class="commentary-section-footer">
+                <div class="commentary-answer">
+                  <img src="icons/reply.png" alt="reply icon">
+                  <p>Odpowiedz</p>
+                  <img src="icons/share.png" alt="share icon">
+                </div>
+              </footer>
             </section>
           </div>
           <aside class="slidebar-right">
@@ -321,3 +327,4 @@
     <script src="likesCount.js"></script>
   </body>
 </html>
+
